docs: add proxy helper documentation
Signed-off-by: Charles-Edouard Brétéché <charles.edouard@nirmata.com>

--- a/website/mkdocs.yaml
+++ b/website/mkdocs.yaml
@@ -82,6 +82,7 @@ nav:
     - operations/helpers/events.md
     - operations/helpers/get.md
     - operations/helpers/logs.md
+    - operations/helpers/proxy.md
     - operations/helpers/wait.md
 - Reference:
   - reference/index.md
