feat: support flags set and set-string for test cmd
Signed-off-by: ShutingZhao <shuting@nirmata.com>

--- a/testdata/e2e/examples/values/chainsaw-test.yaml
+++ b/testdata/e2e/examples/values/chainsaw-test.yaml
@@ -9,3 +9,6 @@ spec:
     - assert:
         resource:
           ($values.foo): bar
+          ($values.env): poc
+          ($values.clusterDirectory): my-cluster
+          ($values.image.tag): "01"
