feat: add wait for creation support
Signed-off-by: Charles-Edouard Brétéché <charles.edouard@nirmata.com>

--- a/.crds/chainsaw.kyverno.io_configurations.yaml
+++ b/.crds/chainsaw.kyverno.io_configurations.yaml
@@ -771,6 +771,10 @@ spec:
                               required:
                               - name
                               type: object
+                            creation:
+                              description: Creation specifies parameters for waiting
+                                on a resource's creation.
+                              type: object
                             deletion:
                               description: Deletion specifies parameters for waiting
                                 on a resource's deletion.
@@ -1812,6 +1816,10 @@ spec:
                                       type: string
                                   required:
                                   - name
+                                  type: object
+                                creation:
+                                  description: Creation specifies parameters for waiting
+                                    on a resource's creation.
                                   type: object
                                 deletion:
                                   description: Deletion specifies parameters for waiting
