--- a/.crds/chainsaw.kyverno.io_steptemplates.yaml
+++ b/.crds/chainsaw.kyverno.io_steptemplates.yaml
@@ -794,6 +794,10 @@ spec:
                               required:
                               - name
                               type: object
+                            creation:
+                              description: Creation specifies parameters for waiting
+                                on a resource's creation.
+                              type: object
                             deletion:
                               description: Deletion specifies parameters for waiting
                                 on a resource's deletion.
@@ -1578,6 +1582,10 @@ spec:
                               required:
                               - name
                               type: object
+                            creation:
+                              description: Creation specifies parameters for waiting
+                                on a resource's creation.
+                              type: object
                             deletion:
                               description: Deletion specifies parameters for waiting
                                 on a resource's deletion.
@@ -2361,6 +2369,10 @@ spec:
                                   type: string
                               required:
                               - name
+                              type: object
+                            creation:
+                              description: Creation specifies parameters for waiting
+                                on a resource's creation.
                               type: object
                             deletion:
                               description: Deletion specifies parameters for waiting
@@ -3894,6 +3906,10 @@ spec:
                                   type: string
                               required:
                               - name
+                              type: object
+                            creation:
+                              description: Creation specifies parameters for waiting
+                                on a resource's creation.
                               type: object
                             deletion:
                               description: Deletion specifies parameters for waiting
