--- a/testdata/e2e/examples/wait/chainsaw-test.yaml
+++ b/testdata/e2e/examples/wait/chainsaw-test.yaml
@@ -30,6 +30,14 @@ spec:
         for:
           condition:
             name: Ready
+    - wait:
+        timeout: 1m
+        apiVersion: v1
+        kind: Pod
+        name: example
+        format: yaml
+        for:
+          creation: {}
     - delete:
         ref:
           apiVersion: v1
