feat: add scenario support to logger
Signed-off-by: Charles-Edouard Brétéché <charles.edouard@nirmata.com>

--- a/.crds/chainsaw.kyverno.io_tests.yaml
+++ b/.crds/chainsaw.kyverno.io_tests.yaml
@@ -954,6 +954,9 @@ spec:
                         - value
                         type: object
                       type: array
+                    name:
+                      description: Scenario name.
+                      type: string
                   type: object
                 type: array
               skip:
