chore: fix wrong schema path in e2e tests
Signed-off-by: Charles-Edouard Brétéché <charles.edouard@nirmata.com>

--- a/testdata/e2e/examples/negative-testing/script/chainsaw-test.yaml
+++ b/testdata/e2e/examples/negative-testing/script/chainsaw-test.yaml
@@ -1,9 +1,10 @@
-# yaml-language-server: $schema=../../../../.schemas/json/test-chainsaw-v1alpha1.json
+# yaml-language-server: $schema=../../../../../.schemas/json/test-chainsaw-v1alpha1.json
 apiVersion: chainsaw.kyverno.io/v1alpha1
 kind: Test
 metadata:
   name: negative-script
 spec:
+  concurrent: false
   steps:
   - try:
     - script:
