--- a/.crds/chainsaw.kyverno.io_tests.yaml
+++ b/.crds/chainsaw.kyverno.io_tests.yaml
@@ -905,6 +905,9 @@ spec:
                 description: FailFast determines whether the test should stop upon
                   encountering the first failure.
                 type: boolean
+              fastNamespaceDeletion:
+                description: FastNamespaceDeletion skips waiting for namespace deletion.
+                type: boolean
               forceTerminationGracePeriod:
                 description: ForceTerminationGracePeriod forces the termination grace
                   period on pods, statefulsets, daemonsets and deployments.
